correction of sponsors appearance on firefox

--- a/css/egsr.css
+++ b/css/egsr.css
@@ -61,6 +61,18 @@ figcaption {
   font-weight: bold;
 }
 
+div.line {
+border-bottom:thin solid #D3D3D3;
+margin-bottom: 5%;
+max-height: 5px;
+width:80%;
+margin-left: 10%;
+
+}
+
+div.sponsors {
+display: inline-block;
+}
 
 .navbar-inverse .navbar-brand {
   color: #fff;
